Handle transaction details on close properly & Fix search icon styles - Closes #3020 (#3028)
* Fix search styling

* Use correct icons

* Fix overflowing text

* Remove nowrap

* Remove only modal query params

* Adjust position of search container

--- a/src/components/shared/navigationBars/topBar/topBar.css
+++ b/src/components/shared/navigationBars/topBar/topBar.css
@@ -38,12 +38,16 @@
   }
 
   & .searchContainer {
-    background-color: var(--color-search-container);
-    border-radius: 3px;
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  & .searchContainerParam {
+    background-color: var(--color-search-container);
+    border-radius: 3px;
     padding: 8px 10px;
+    margin-left: -10px;
 
     & .searchedValue {
       @mixin contentLarge normal;
@@ -56,7 +60,7 @@
     }
 
     & .accountVisual {
-      padding-left: 6px;
+      padding-left: 10px;
     }
   }
 }
